@@ -5,17 +5,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8, 3.9, '3.10']
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    - name: Setup pyenv
+      uses: "gabrielfalcao/pyenv-action@v9"
       with:
-        python-version: '3.10'
-
+          versions: 3.8.16, 3.9.16, 3.10.9
+    - name: chechout package
+      uses: actions/checkout@v2
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
