@@ -1,5 +1,5 @@
-### Fix github ci (HEAD -> main)
->Mon, 16 Jan 2023 02:25:19 +0100
+### Fix github action (HEAD -> main)
+>Mon, 16 Jan 2023 02:36:35 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
 
@@ -9,6 +9,16 @@
 
 
 ### Fix github ci (origin/main, origin/HEAD)
+>Mon, 16 Jan 2023 02:25:19 +0100
+
+>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Fix github ci
 >Mon, 16 Jan 2023 02:14:57 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
